[metadata]
name = pyusps
version = 0.0.7
author = Andres Buritica
author_email = andres@thelinuxkid.com
description = pyusps -- Python bindings for the USPS Ecommerce APIs
license = MIT
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/thelinuxkid/pyusps
project_urls =
    Tracker = https://github.com/thelinuxkid/pyusps/issues
    Source = https://github.com/thelinuxkid/pyusps
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =
    lxml>=2.3.3

[options.extras_require]
test =   
    fudge>=1.1.1
    lxml_stubs>=0.4.0
    mypy>=0.942
    nose>=1.3.7
dev = 
    ipython>=5.5.0